[tool.poetry]
name = "bddworkshop"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
connexion = "^2.7.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
